fix layout shift on mobile

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -138,7 +138,7 @@ header {
   @media (min-width: 720px) {
     display: grid;
     grid-template-areas: 'logo tickets' 'copy copy';
-    max-width: 1440px;
+    max-width: 1100px;
 
     .inner {
       max-width: revert;
@@ -179,7 +179,7 @@ header {
 .hero-ctas {
   max-width: 299px;
   margin: 0 auto 32px;
-  align-self: center;
+  /* padding: 8px 0; */
 }
 
 .hero-ctas a {
@@ -1070,10 +1070,12 @@ footer nav a:hover {
 }
 
 #high_contrast {
+  z-index: 10;
   position: absolute;
   top: 0;
   right: 8px;
   cursor: pointer;
+  user-select: none;
 }
 
 @container style(--high-contrast: 1) {
@@ -1090,11 +1092,13 @@ footer nav a:hover {
   }
 
   header {
-    margin: 0;
-    max-width: 100%;
     padding-bottom: 40px;
-    display: flex;
-    flex-direction: column;
+    @media (min-width: 720px) {
+      margin: 0;
+      max-width: 100%;
+      display: flex;
+      flex-direction: column;
+    }
   }
 
   footer,
